pushing final version

--- a/assessment.ipynb
+++ b/assessment.ipynb
@@ -523,6 +523,16 @@
     "except:\n",
     "    print(\"rng is not a lambda function, must be a lambda function to continue\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert this notebook to README by running this cell!\n",
+    "!jupyter nbconvert --to markdown assessment.ipynb && mv assessment.md README.md"
+   ]
   }
  ],
  "metadata": {
