updating assessment.ipynb

--- a/assessment.ipynb
+++ b/assessment.ipynb
@@ -15,7 +15,7 @@
     "    - write a function that takes in a parameter to complete a task\n",
     "    - write a function that takes in multiple parameters to complete a task\n",
     "\n",
-    "# Stretch Goals\n",
+    "# Level Up Goals\n",
     "- write a function that solves a particular logical task\n",
     "- write a lambda function to complete a task"
    ]
@@ -259,6 +259,7 @@
     "    - add 1 to each odd number\n",
     "    return the sum of all of these numbers\n",
     "    \"\"\"\n",
+    "    \n",
     "    pass"
    ]
   },
@@ -495,7 +496,7 @@
    "outputs": [],
    "source": [
     "# write a lambda function called rng that returns the range of a list of numbers\n",
-    "rng = lambda lst: max(lst) - min(lst)"
+    "rng = None"
    ]
   },
   {
