pushing finalized assessment

--- a/assessment.ipynb
+++ b/assessment.ipynb
@@ -71,6 +71,8 @@
    "outputs": [],
    "source": [
     "# build your word_counter here\n",
+    "# Your code here\n",
+    "\n",
     "word_counter = None"
    ]
   },
@@ -81,6 +83,8 @@
    "outputs": [],
    "source": [
     "# get actual word_counter here\n",
+    "# just run this cell\n",
+    "\n",
     "word_counter_test = sol.section1_partA(lyrics)"
    ]
   },
@@ -91,6 +95,8 @@
    "outputs": [],
    "source": [
     "# Test your code here\n",
+    "# just run this cell\n",
+    "\n",
     "try:\n",
     "    assert word_counter==word_counter_test\n",
     "    print('test passed')\n",
@@ -112,6 +118,8 @@
    "outputs": [],
    "source": [
     "# Find the word with the highest counts\n",
+    "# Your code here\n",
+    "\n",
     "most_common_word = None"
    ]
   },
@@ -122,6 +130,8 @@
    "outputs": [],
    "source": [
     "# get actual most_common_word\n",
+    "# just run this cell\n",
+    "\n",
     "most_common_word_test = sol.section1_partB(lyrics)"
    ]
   },
@@ -132,6 +142,8 @@
    "outputs": [],
    "source": [
     "# test your solution here\n",
+    "# just run this cell\n",
+    "\n",
     "try:\n",
     "    assert most_common_word==most_common_word_test\n",
     "    print('test passed')\n",
@@ -161,6 +173,9 @@
    "outputs": [],
    "source": [
     "# calculate the mean word counts\n",
+    "# Your code here\n",
+    "# you can write a function or just do it outright. \n",
+    "\n",
     "mean_word_counts = None"
    ]
   },
@@ -171,6 +186,8 @@
    "outputs": [],
    "source": [
     "# get actual mean word counts\n",
+    "# just run this cell\n",
+    "\n",
     "mean_word_counts_test = sol.section2_partA(lyrics)"
    ]
   },
@@ -181,6 +198,8 @@
    "outputs": [],
    "source": [
     "# test your solution here\n",
+    "# just run this cell\n",
+    "\n",
     "try:\n",
     "    assert mean_word_counts==mean_word_counts_test\n",
     "    print('test passed')\n",
@@ -202,6 +221,9 @@
    "outputs": [],
    "source": [
     "# calculate the standard deviation of the word_counts\n",
+    "# you can write a function or just calculate it out right.  It's up to you.\n",
+    "# Your code here\n",
+    "\n",
     "std_word_counts = None"
    ]
   },
@@ -212,6 +234,8 @@
    "outputs": [],
    "source": [
     "# get actual standard deviation of word counts\n",
+    "# just run this cell\n",
+    "\n",
     "std_word_counts_test = sol.section2_partB(lyrics)"
    ]
   },
@@ -222,6 +246,8 @@
    "outputs": [],
    "source": [
     "# test your solution here\n",
+    "# just run this cell\n",
+    "\n",
     "try:\n",
     "    assert std_word_counts==std_word_counts_test\n",
     "    print('test passed')\n",
@@ -249,6 +275,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Your code here\n",
     "# write the function below\n",
     "def transform_odds(lst):\n",
     "    \"\"\"\n",
@@ -270,6 +297,8 @@
    "outputs": [],
    "source": [
     "# run cell to generate a list of 100 random numbers\n",
+    "# just run this cell\n",
+    "\n",
     "import random\n",
     "random_nums = [random.randint(0, 1000) for i in range(100)]"
    ]
@@ -281,6 +310,8 @@
    "outputs": [],
    "source": [
     "# run this cell to transform the random_numbers and store them to transformed_odds\n",
+    "# just run this cell\n",
+    "\n",
     "transformed_odds = transform_odds(random_nums)"
    ]
   },
@@ -291,6 +322,8 @@
    "outputs": [],
    "source": [
     "# run this cell to get the actual value of transformed odds\n",
+    "# just run this cell\n",
+    "\n",
     "transformed_odds_test = sol.section3_partA(random_nums)"
    ]
   },
@@ -301,6 +334,8 @@
    "outputs": [],
    "source": [
     "# test your solution here\n",
+    "# just run this cell\n",
+    "\n",
     "try:\n",
     "    assert transformed_odds==transformed_odds_test\n",
     "    print('test passed')\n",
@@ -321,6 +356,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Your code here\n",
     "# write a function that checks the numbers in a list numbers\n",
     "# and checks if any of the numbers are divisible in a list of divisors divisors\n",
     "# it should return the all numbers in order they're given in the list \n",
@@ -345,6 +381,8 @@
    "outputs": [],
    "source": [
     "# run this cell to get a random set of numbers and divisors\n",
+    "# just run this cell\n",
+    "\n",
     "numbers = [random.randint(0, 50) for i in range(200)]\n",
     "divisors = [random.randint(1, 20) for i in range(5)]"
    ]
@@ -356,6 +394,8 @@
    "outputs": [],
    "source": [
     "# get your solution for the random numbers above\n",
+    "# just run this cell\n",
+    "\n",
     "number_string = find_if_divisible(numbers=numbers, divisors=divisors)"
    ]
   },
@@ -366,6 +406,8 @@
    "outputs": [],
    "source": [
     "# get the actual solution for the random numbers above\n",
+    "# just run this cell\n",
+    "\n",
     "number_string_test = sol.section3_partB(numbers, divisors)"
    ]
   },
@@ -376,6 +418,8 @@
    "outputs": [],
    "source": [
     "# test your solution here\n",
+    "# just run this cell\n",
+    "\n",
     "try:\n",
     "    assert number_string==number_string_test\n",
     "    print('passed test')\n",
@@ -403,6 +447,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Your code here\n",
+    "\n",
     "def is_prime(n):\n",
     "    \"\"\"\n",
     "    write a function that determines if a number is prime\n",
@@ -420,6 +466,8 @@
    "outputs": [],
    "source": [
     "# run all tests in this cell\n",
+    "# just run this cell\n",
+    "\n",
     "random_nums = [random.randint(5, 50) for i in range(10)]\n",
     "for n in random_nums:\n",
     "    actual_result = is_prime(n)\n",
@@ -446,6 +494,8 @@
    "outputs": [],
    "source": [
     "# complete this function\n",
+    "# Your code here\n",
+    "\n",
     "def find_common_elements(lst1, lst2):\n",
     "    \"\"\"\n",
     "    write a function that returns a set\n",
@@ -470,6 +520,8 @@
    "outputs": [],
    "source": [
     "# run the following tests\n",
+    "# just run this cell\n",
+    "\n",
     "for i in range(10):\n",
     "    lst1 = [random.randint(0, 100) for i in range(random.randint(15, 20))]\n",
     "    lst2 = [random.randint(0, 100) for i in range(random.randint(15, 20))]\n",
@@ -496,7 +548,7 @@
    "outputs": [],
    "source": [
     "# write a lambda function called rng that returns the range of a list of numbers\n",
-    "rng = None"
+    "# Your code here\n"
    ]
   },
   {
@@ -506,6 +558,11 @@
    "outputs": [],
    "source": [
     "# run these tests\n",
+    "# just run this cell\n",
+    "\n",
+    "# this cell goes through 2 tests. \n",
+    "# 1. did you write a function called rng that is actually a lambda function\n",
+    "# 2. is written correctly\n",
     "try:\n",
     "    assert '<lambda>'==rng.__name__\n",
     "    print(\"rng is a lambda function! great work so far\")\n",
